--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,13 @@ body{
 }
 .maintext {
     text-align: center;
-    transform: translateY(200px);
+    max-width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    transform: translateY(190px);
 }
 .header{
+    display: inline-block;
     color: hsl(0, 0%, 93%);
     font-family: cooking;
     font-size: 40px;
@@ -24,12 +28,76 @@ body{
     margin: 2px;
 }
 .icons {
-    text-align: center;
-    transform: translateY(220px);
+    max-width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    transform: translateY(200px);
     padding: 5px;
-    margin: 5px;
 }
-.icons a{
+.icons a {
     text-decoration: none;
-    margin-right: 10px;
 }
+.icons i {
+    margin-right: 10px;
+    transition: all 0.3s ease;
+}
+.githubIcon:hover i{
+    transform: scale(1.1, 1.1);
+}
+.discordIcon:hover i{
+    transform: scale(1.1, 1.1);
+}
+.youtubeIcon:hover i{
+    transform: scale(1.1, 1.1);
+}
+.explorediv {
+    max-width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    transform: translateY(300px);
+    padding: 5px;
+}
+.explore {
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    display: inline-flex;
+    animation: pulse 5s infinite;
+}
+.explore:hover {
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgb(255, 255, 255);
+    display: inline-flex;
+    transform: scale(1.2, 1.2);
+    animation: none;
+}
+.fa-solid.fa-rocket.fa-2xl {   
+    transform: scale(2, 2) translate(-2px, 2px);
+}
+.fa-solid.fa-fire.fa-xl {
+    display: none;
+    position: absolute;
+    rotate: 225deg;
+    transform: translate(1px, -35px);
+}
+.explore:hover > .fa-solid.fa-fire.fa-xl {
+    display: inline;
+}
+@keyframes pulse{
+    0% {
+        transform: scale(1, 1);
+    }
+    50% {
+        transform: scale(1.2, 1.2);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+}   
